<resources>
    <string name="app_name">HICURE</string>
    <string name="main_title">Title</string>
    <string name="sub_title">맞춤형 헬스케어 진단 서비스</string>
    <string name="title_alarm_list">알람</string>
    <string name="title_set_alarm">알람 설정</string>>

    <string name="alarm_box_blue_time">08:00</string>
    <string name="alarm_box_yellow_time">12:00</string>
    <string name="alarm_box_pink_time">06:00</string>
    <string name="alarm_box_AM">AM</string>
    <string name="alarm_box_PM">PM</string>
    <string name="alarm_box_name_blue">아침</string>
    <string name="alarm_box_name_yellow">점심</string>
    <string name="alarm_box_name_pink">저녁</string>

    <string name="set_alarm_name">알람 이름</string>
    <string name="set_alarm_name_text_field">내용을 입력해주세요.</string>
    <string name="set_alarm_sound_vibrate">소리 및 진동</string>
    <string name="set_alarm_cancel_button">취소</string>
    <string name="set_alarm_save_button">저장</string>

<!--    <string name="hour_picker_description">Select hour</string>-->
<!--    <string name="minute_picker_description">Select minute</string>-->
<!--    <string name="am_pm_toggle_description">Toggle AM/PM</string>-->
<!--    <string name="cancel_button_description">Cancel alarm</string>-->
<!--    <string name="save_button_description">Save alarm</string>-->
<!--    <string name="sound_vibration_switch_description">Toggle sound and vibration</string>-->
<!--    <string name="alarm_name_edit_text_description">Enter alarm name</string>-->

    <string name="description">add drawable</string>
    <string name="touchScreen">화면을 터지해주세요</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tempSurveyQuestion">임시 질문 문항</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="surveyTitle">설문 제목</string>
    <string name="check">확인</string>
    <string name="pop_up_title">팝업 제목</string>
    <string name="id_help">식별코드는 안내지에 기입되어 있습니다.</string>
    <string name="temporary_text">글을 입력해주세요.</string>
    <string name="button">버튼 text</string>
    <string name="surveySubTitle">n일차 월/일</string>
    <string name="qNo">no.</string>
    <string name="userGender">유저 성별</string>
    <string name="userAge">유저 나이</string>
    <string name="inquiryText">앱 또는 키트를 사용하면서\n발생한 문제점이나\n어려움을 남겨주세요.</string>
</resources>