<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/pop_up_frame"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/exit_button"
        android:contentDescription="@string/description"
        android:layout_gravity="end|center"
        android:layout_height="15dp"
        android:layout_width="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/x" />

    <TextView
        android:id="@+id/Title"
        android:fontFamily="@font/roboto_bold"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:text="@string/pop_up_title"
        android:textSize="25sp" />

    <EditText
        android:background="@drawable/edit_text_frame"
        android:gravity="center"
        android:hint="@string/temporary_text"
        android:id="@+id/edit_text"
        android:inputType="text"
        android:layout_height="48dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textColorHint="@color/temporary_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/content"
        android:fontFamily="@font/roboto_bold"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:text="@string/id_help"
        android:textColor="@color/edge_blue"
        android:textSize="12sp" />

    <Button
        android:id="@+id/check_button"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_width="wrap_content"
        android:text="@string/button" />

</LinearLayout>
