<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/pop_up_frame"
    android:orientation="vertical">

    <Button
        android:id="@+id/exit_button"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_gravity="end|center"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/x"
        android:contentDescription="@string/description" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/pop_up_title"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp" />

    <ImageView
        android:id="@+id/check_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        android:background="@drawable/check" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/id_help"
        android:textColor="@color/edge_blue"
        android:textSize="12sp" />

    <android.widget.Button
        android:id="@+id/checkButton"
        android:visibility="gone"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_blue"
        android:fontFamily="@font/oxygen_light"
        android:text="@string/check"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>
