<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/qNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/qNo"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/qtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/tempSurveyQuestion"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/yes"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/no"
            android:textColor="@color/black"/>

    </RadioGroup>

    <!--<TextView
        android:id="@+id/qNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="01" />

    <TextView
        android:id="@+id/qText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="안녕하십니까 반갑습니다." />

    <TextView
        android:id="@+id/qTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="안녕하십니까 반갑습니다." />-->

</LinearLayout>