<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AlarmList">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/title_bubble_background">
        </TextView>

        <com.example.hicure.OutLineTextView
            android:id="@+id/custom_alarm_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/jua_regular"
            android:gravity="center"
            android:text="@string/title_alarm_list"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textStrokeColor="@color/edge_blue"
            app:textStrokeWidth="18" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/alarm_box_blue">

            <TextView
                android:id="@+id/alarmLabelBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="측정 1회차"
                android:textSize="10sp"
                android:textColor="@color/edge_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/alarmTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_box_blue_time"
                android:textSize="32sp"
                android:textColor="@color/edge_blue"
                android:fontFamily="@font/oxygen_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alarmLabelBlue"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/alarmAmPm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="12dp"
                android:text="@string/alarm_box_AM"
                android:textSize="24sp"
                android:textColor="@color/edge_blue"
                android:fontFamily="@font/oxygen_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alarmLabelBlue" />

<!--            <androidx.appcompat.widget.SwitchCompat-->
<!--                android:id="@+id/switchAlarmBlue"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintBottom_toBottomOf="parent" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/alarm_box_blue">

                <TextView
                    android:id="@+id/alarmLabelYellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="측정 2회차"
                    android:textSize="10sp"
                    android:textColor="@color/edge_blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/alarmTimeYellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_box_blue_time"
                    android:textSize="32sp"
                    android:textColor="@color/edge_blue"
                    android:fontFamily="@font/oxygen_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/alarmLabelYellow"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/alarmAmPm2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/alarm_box_AM"
                    android:textSize="24sp"
                    android:textColor="@color/edge_blue"
                    android:fontFamily="@font/oxygen_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/alarmLabelYellow" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchAlarmYellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:thumb="@drawable/alarm_switch_thumb"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:switchMinWidth="45dp"
                    app:track="@drawable/alarm_selector_switch" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>
